networkpolicy/networkpolicy__basic_kafka_setup__jupyterhub__all__jupyterhub__ingress__ports__jupyterhub__nr44__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jupyterhub--all--jupyterhub--ingress--ports--jupyterhub--nr44
  namespace: jupyterhub
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: jupyterhub
